tests/errors/first_stage/.define/unexpected_chars/unexpected_chars.as
; unexpected characters at the end of a constant definition
.define myconst = 0 a